# go-fitz

./: .appveyor.yml  .bazelignore  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  README.md  WORKSPACE  example_test.go  fitz.go  fitz_cgo.go  fitz_cgo_cgo.go  fitz_cgo_extlib.go  fitz_cgo_extlib_pkgconfig.go  fitz_compat.go  fitz_concurrency_test.go  fitz_content_types.go  fitz_content_types_test.go  fitz_nocgo.go  fitz_test.go  fitz_vendor.go  go.mod  go.sum  go_deps.bzl  purego_darwin.go  purego_linux.go  purego_windows.go  stderr_other.go  stderr_unix.go  stderr_windows.go  struct_unix.go  struct_windows.go
.codebase/pipelines/: bazel_test_boe.yml  bazel_test_boei18n.yml
.github/workflows/: build.yml  test.yml
include/: vendor.go
include/mupdf/fitz/: config.h  heap-imp.h  vendor.go
include/mupdf/pdf/: name-table.h
testdata/: test.cbz  test.epub  test.fb2  test.jb2  test.jp2  test.jxr  test.mobi  test.pam  test.pbm  test.pgm  test.ppm  test.psd  test.tif  test.xps
tests/: test_invariant_heap-imp.h
